dudld (0.1.22) unstable; urgency=low

  * made gstreamer output pipeline configurable

 -- Rainer Clasen <bj@zuto.de>  Thu,  1 Jan 2009 14:53:14 +0100

dudld (0.1.21) unstable; urgency=low

  * switch from popt to GOption to allow ...
  * switch to gstreamer-0.10

 -- Rainer Clasen <bj@zuto.de>  Wed, 31 Dec 2008 12:11:41 +0100

dudld (0.1.20) unstable; urgency=low

  * switched from libncc to liblockfile

 -- Rainer Clasen <bj@zuto.de>  Wed, 24 Dec 2008 12:20:23 +0100

dudld (0.1.19) unstable; urgency=low

  * properly close client sockets
  * toggle debuging by SIGUSR1

 -- Rainer Clasen <bj@zuto.de>  Wed, 26 Nov 2008 13:36:51 +0100

dudld (0.1.18) unstable; urgency=low

  * lowercased filter to match indices

 -- Rainer Clasen <bj@zuto.de>  Sat,  8 Sep 2007 19:42:25 +0200

dudld (0.1.17) unstable; urgency=low

  * added tagsartist, artiststag, albumstag

 -- Rainer Clasen <bj@zuto.de>  Wed,  1 Aug 2007 10:28:31 +0200

dudld (0.1.16) unstable; urgency=low

  * added replaygain support
  * added support for skipping begin/end of track

 -- Rainer Clasen <bj@zuto.de>  Fri, 16 Feb 2007 14:36:02 +0100

dudld (0.1.15) unstable; urgency=low

  * bugfix: avoid free()ing still used filter in db_connected
  * rebuild for new dbversion

 -- Rainer Clasen <bj@zuto.de>  Sun, 11 Feb 2007 16:08:16 +0100

dudld (0.1.14) unstable; urgency=low

  * rebuild for etch

 -- Rainer Clasen <bj@zuto.de>  Tue, 30 Jan 2007 19:08:54 +0100

dudld (1.1.13) unstable; urgency=low

  * check DB Version on connect
  * sort random_top results
  * recreate cache table on DB reconnect
  * added audioscale to gst pipe for files with samplerates != 44khz
  * send elapsed broadcast
  * added pos filed to filter parser

 -- Rainer Clasen <bj@zuto.de>  Sun, 28 Jan 2007 14:33:02 +0100

dudld (0.1.12) unstable; urgency=low

  * depend on dudl-dbschema instead of versioned dudl-db

 -- Rainer Clasen <bj@zuto.de>  Thu, 19 Jan 2006 15:03:14 +0100

dudld (0.1.11) unstable; urgency=low
