@@ -9,6 +9,28 @@ the server hase to use multiple threads/-processes. Multiple processes
 won't work with the cache table. Threads require some kind of locking to
 avoid multiple concurrent queries.
 
+with threads:
+- fix proto_fmt - get rid of static buffer
+- serialize global data: clients, filter, sleep (, options?)
+- serialize player access
+- serialize DB access
+- one thread per client, blocking write, per-thread main-loop that checks
+  incoming client cmds + broadcasts from dudld.
+- one thread to accept new clients?
+
+same process:
+- when starting to process client command (proto_input) suspend reading
+  further client input. Avoids hogging server resources.
+- instead of sending output to the client directly put a "message" object
+  into it's out-queue.
+- process client's message queue from main_loop (when socket is writable)
+- opt: suspend queue processing (i.e. main loop socket watch) when queue
+  is empty
+- resume reading client input when message queue is empty
+- message:
+  - provides iterator to get next line to send to client
+  - iterator frees used memory itself on disposal
+
 find way to deal with "broken" files. (set/view stor_file flag)
 
 get rid of cache table
@@ -23,7 +45,7 @@ change lastplay evaluation for random
 - only look at lastplay for tracks picked by random play. (non-queued)
 - introdcue "last" for tracks picked by random play
 
-make randomness - see pgdb/random.c:
+make randomness configurable - see pgdb/random.c:
 - algorithm (none/plain/abs/divi/first)
 - max percent (curently hardcoded 33%)
 - max total (used to be hardcoded to 1000)
@@ -76,12 +98,8 @@ integrate dudl with test-listening and renaming
 
 go back to previous track
 
-gst sink selection: sinkadd/sinkdel?
- - ? local oss/alsa(/esd?) playback?
- - LAN mcast audio/raw
- - winamp conform inet stream
-   - ? http-proxied mp3 with low bitrate
-   - ? shoutcast
+runtime gstreamer output selection?
+inject tags from DB (taginject element in recent gst releases)
 
 more queue controls
  move
